# em0-mcp-wrapper

./: README.md  pyproject.toml
docs/specs/: 01-auto-context-resource.md  02-memory-compaction.md  03-conflict-detection.md  04-freshness-scoring.md  05-mcp-resources.md  06-cross-project-graph.md  07-webhook-events.md  README.md
infra/: deploy-neo4j.sh  migrate-to-graph.py
scripts/: setup-em0.sh
server/: Dockerfile  graph_payload.py  main.py  mem0_compat.py  requirements.txt  scoring.py
src/em0_mcp_wrapper/: __init__.py  client.py  config.py  server.py  setup_cli.py
tests/: conftest.py  test_client.py  test_graph_payload.py  test_graph_v2_html.py  test_mem0_compat.py  test_server.py  test_server_requirements.py
